crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__order_by_type_with_custom_variables_order_by_type_with_custom_variables.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
---
./resources/test/fixtures/isort/order_by_type_with_custom_variables.py:1:1: I001 [*] Import block is un-sorted or un-formatted
  |
1 | / from sklearn.svm import VAR, Class, MyVar, CONST, abc
2 | | from subprocess import utils, var_ABC, Variable, Klass, CONSTANT, exe
  |
  = help: Organize imports

ℹ Suggested fix
1   |-from sklearn.svm import VAR, Class, MyVar, CONST, abc
2   |-from subprocess import utils, var_ABC, Variable, Klass, CONSTANT, exe
  1 |+from subprocess import CONSTANT, Klass, exe, utils, var_ABC, Variable
  2 |+
  3 |+from sklearn.svm import CONST, Class, abc, MyVar, VAR


