crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__preserve_comment_order.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
---
./resources/test/fixtures/isort/preserve_comment_order.py:1:1: I001 [*] Import block is un-sorted or un-formatted
   |
 1 | / import io
 2 | | # Old MacDonald had a farm,
 3 | | # EIEIO
 4 | | # And on his farm he had a cow,
 5 | | # EIEIO
 6 | | # With a moo-moo here and a moo-moo there
 7 | | # Here a moo, there a moo, everywhere moo-moo
 8 | | # Old MacDonald had a farm,
 9 | | # EIEIO
10 | | from errno import EIO
11 | | import abc
   |
   = help: Organize imports

ℹ Suggested fix
   1  |+import abc
1  2  | import io
   3  |+
2  4  | # Old MacDonald had a farm,
3  5  | # EIEIO
4  6  | # And on his farm he had a cow,
--------------------------------------------------------------------------------
8  10 | # Old MacDonald had a farm,
9  11 | # EIEIO
10 12 | from errno import EIO
11    |-import abc


