crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__required_import_comment.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
---
comment.py:1:1: I002 [*] Missing required import: `from __future__ import annotations`
  |
1 | #!/usr/bin/env python3
  |  I002
2 | 
3 | x = 1
  |
  = help: Insert required import: `from future import annotations`

ℹ Suggested fix
1 1 | #!/usr/bin/env python3
  2 |+from __future__ import annotations
2 3 | 
3 4 | x = 1


